--- a/src/components/BasketAddBtn.css
+++ b/src/components/BasketAddBtn.css
@@ -5,7 +5,8 @@
   background-color: #1fc781;
   font-size: 16px;
   display: flex;
-  gap: 20px
+  gap: 15px;
+  width: 180px;
 }
 
 .btn:hover {
@@ -13,7 +14,7 @@
 }
 
 .addBasket-input {
-  width: 30px;
+  width: 40px;
   font-size: 20px;
   border-radius: 5px;
   border-color:rgb(133, 241, 147);
